# async-python-sprint-2

./: .gitignore  README.md  job.py  main.py  pyproject.toml  scheduler.py  schemas.py  setting_log.py  setup.cfg  tasks.py  utils.py
.github/workflows/: app-testing.yml
tests/: conftest.py  test_job.py  test_scheduler.py
